# spotfire-sbdf-c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/: all.h  all_io.h  bytearray.h  columnmetadata.h  columnslice.h  columnslice_io.h  config.h  errors.h  fileheader.h  metadata.h  object.h  object_io.h  sbdfstring.h  sectiontypeid.h  sectiontypeid_io.h  tablemetadata.h  tablemetadata_io.h  tableslice.h  tableslice_io.h  valuearray.h  valuearray_io.h  valuetype.h  valuetype_io.h  valuetypeid.h
src/: bswap.c  bswap.h  bytearray.c  columnmetadata.c  columnslice.c  errors.c  fileheader.c  internals.c  internals.h  metadata.c  object.c  sbdfstring.c  tablemetadata.c  tableslice.c  valuearray.c  valuetype.c
tests/: CMakeLists.txt  TestFramework.cmake  advanced_api_test.cpp  api_scenario.c  bytearray_test.cpp  columnslice_test.cpp  cppsupp.h  dumpcontents_test.cpp  main.cpp  metadata_test.cpp  object_test.cpp  samplefile_test.cpp  string_test.cpp  tablemetadata_test.cpp  tableslice_test.cpp  test.cpp  test.h  test_c.h  valuearray_test.cpp
tests/samples/: 0_Binary.sbdf  0_Boolean.sbdf  0_Date.sbdf  0_DateTime.sbdf  0_Decimal.sbdf  0_Double.sbdf  0_Float.sbdf  0_Integer.sbdf  0_Long.sbdf  0_String.sbdf  0_Time.sbdf  0_TimeSpan.sbdf  no_columns_Binary.sbdf  no_columns_Boolean.sbdf  no_columns_Date.sbdf  no_columns_DateTime.sbdf  no_columns_Decimal.sbdf  no_columns_Double.sbdf  no_columns_Float.sbdf  no_columns_Integer.sbdf  no_columns_Long.sbdf  no_columns_String.sbdf  no_columns_Time.sbdf  no_columns_TimeSpan.sbdf
